# mgr2022

./: .dockerignore  .gitignore  README.md  Taskfile.yaml  Tiltfile  diagram.py  docker-compose.yaml
.docker/images/fastapi/: Dockerfile
.docker/images/flask/: Dockerfile
.docker/images/micronaut/: Dockerfile
.docker/images/python/: Dockerfile
.docker/images/quarkus/: Dockerfile  Dockerfile.native
dashboards/: results.json
java/micronaut/: build.gradle.kts
java/quarkus/: README.md  build.gradle  gradle.properties  settings.gradle
local-setup-results/: fastapi_k6  flask_k6  micronaut_k6  quarkus_k6
manifests/: local-dev-cluster.yaml
manifests/base/: kustomization.yaml
manifests/base/database/: deployment.yaml  service.yaml
manifests/base/grafana/: config.env  datasource.yaml  deployment.yaml  kustomization.yaml  service.yaml
manifests/base/influxdb/: values.yaml
manifests/base/k6/: config.env  job.yaml  kustomization.yaml
manifests/base/service/: deployment.yaml  kustomization.yaml  service.yaml
manifests/overlays/fastapi/: kustomization.yaml
manifests/overlays/flask/: kustomization.yaml
manifests/overlays/micronaut/: kustomization.yaml
manifests/overlays/quarkus/: kustomization.yaml
manifests/scenarios/: kustomization.yaml  resources.yaml
python/fastapi/: gunicorn_conf.py  pyproject.toml  requirements.txt
python/fastapi/app/: __init__.py  app.py  asgi.py  db.py
python/flask/: gunicorn_conf.py  pyproject.toml  requirements.txt
python/flask/app/: app.py  db.py  schemas.py  wsgi.py
scenarios/scripts/: scenario1.js
(+27 files in other folders)
