[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Radzim Kowalow <radzim_ko@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
sqlalchemy = "^2.0.5.post1"
bcrypt = "^4.0.1"
requests = "^2.28.2"
gunicorn = "^20.1.0"
pydantic = "^1.10.6"
orjson = "^3.8.7"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
